--- a/Sample/src/main/res/layout/activity_main.xml
+++ b/Sample/src/main/res/layout/activity_main.xml
@@ -2,27 +2,29 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context=".MainActivity">
 
     <!--<com.rethoughtsolutions.swipecardentry.SwipeCardEntry-->
-        <!--android:id="@+id/swipecardentry"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content" />-->
+    <!--android:id="@+id/swipecardentry"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="wrap_content" />-->
     <com.rethoughtsolutions.swipecardentry.sample.TestSwipeCardEntry
-    android:id="@+id/swipecardentry"
-    android:background="@android:drawable/editbox_background_normal"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content" />
+        android:id="@+id/swipecardentry"
+        android:textSize="22sp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@android:drawable/editbox_background_normal" />
 
     <Button
-        android:id="@+id/status"
-        android:text="@string/pay"
-        android:layout_below="@id/swipecardentry"
+        android:id="@+id/paybutton"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_below="@id/swipecardentry"
+        android:enabled="false"
+        android:text="@string/pay" />
 
 </RelativeLayout>
