added dependency to swipecardentry library

--- a/Sample/src/main/res/layout/activity_main.xml
+++ b/Sample/src/main/res/layout/activity_main.xml
@@ -8,15 +8,16 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".MainActivity">
 
-    <!--<com.rethoughtsolutions.swipecardentry.SwipeCardEntry-->
-    <!--android:id="@+id/swipecardentry"-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="wrap_content" />-->
-    <com.rethoughtsolutions.swipecardentry.sample.TestSwipeCardEntry
-        android:id="@+id/swipecardentry"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@android:drawable/editbox_background_normal" />
+    <com.rethoughtsolutions.swipecardentry.SwipeCardEntry
+    android:id="@+id/swipecardentry"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:background="@android:drawable/editbox_background_normal" />
+    <!--<com.rethoughtsolutions.swipecardentry.sample.TestSwipeCardEntry-->
+        <!--android:id="@+id/swipecardentry"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:background="@android:drawable/editbox_background_normal" />-->
 
     <Button
         android:id="@+id/paybutton"
